fix(Table): fix broken horizontal align prop for `Table.Cell`

--- a/packages/components/src/components/Table/components/TableCell/TableCell.module.css
+++ b/packages/components/src/components/Table/components/TableCell/TableCell.module.css
@@ -6,6 +6,20 @@
   transition: border-radius var(--kbq-transition-default);
 }
 
+.start,
+.left {
+  text-align: start;
+}
+
+.center {
+  text-align: center;
+}
+
+.end,
+.right {
+  text-align: end;
+}
+
 .top {
   vertical-align: top;
 }
