--- a/packages/components/src/components/Table/components/TableColumnHeader/TableColumnHeader.module.css
+++ b/packages/components/src/components/Table/components/TableColumnHeader/TableColumnHeader.module.css
@@ -7,6 +7,20 @@
   padding: var(--table-header-cell-padding);
 }
 
+.start,
+.left {
+  text-align: start;
+}
+
+.center {
+  text-align: center;
+}
+
+.end,
+.right {
+  text-align: end;
+}
+
 .top {
   vertical-align: top;
 }
@@ -42,7 +56,7 @@
 
 /* content */
 .content {
-  display: flex;
+  display: inline-flex;
   gap: var(--kbq-size-s);
 }
 
